// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Corriere Fiorentino renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="i-am-centered"
  >
    <div
      class="list-group"
    >
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="
                    http://proxy.library.nyu.edu/login?url=https://www.pressreader.com/italy/corriere-fiorentino
                "
              rel="noopener noreferrer"
              target="_blank"
            >
              PressReader
            </a>
          </h6>
          <small />
        </div>
      </div>
    </div>
    <div
      class="ask-librarian"
    >
      <h6>
        <a
          href="http://library.nyu.edu/ask/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Ask a Librarian
        </a>
      </h6>
    </div>
  </div>
</DocumentFragment>
`;

exports[`The New Yorker renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="i-am-centered"
  >
    <div
      class="list-group"
    >
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=http://archives.newyorker.com/#folio=C1"
              rel="noopener noreferrer"
              target="_blank"
            >
              E Journal Full Text
            </a>
          </h6>
          <small>
            Available from 1925
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=http://gateway.proquest.com/openurl?rft_id=41130&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&url_ver=Z39.88-2004&res_dat=xri%3Apqm&rfr_id=info%3Axri%2Fsid%3Aprimo&genre=journal"
              rel="noopener noreferrer"
              target="_blank"
            >
              Art, Design & Architecture Collection
            </a>
          </h6>
          <small>
            Available from 2002/11/04
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=http://find.galegroup.com/openurl/openurl?url_ver=Z39.88-2004&url_ctx_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Actx&rft.issn=0028-792X&res_id=info%3Asid%2Fgale%3ASHAX&req_dat=info%3Asid%2Fgale%3Augnid%3Anew64731&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&ctx_enc=info%3Aofi%3Aenc%3AUTF-8&rft.date=2002&rft.jtitle=New+Yorker"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gale Cengage Shakespeare Collection Periodicals
            </a>
          </h6>
          <small>
            Available from 2002
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=https://link.gale.com/apps/pub/1161/ITOF?u=nysl_me_newyorku"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gale General OneFile
            </a>
          </h6>
          <small>
            Available from 2002/01/14
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=https://link.gale.com/apps/pub/1161/LitRC?u=new64731"
              rel="noopener noreferrer"
              target="_blank"
            >
              Gale Literature Resource Center
            </a>
          </h6>
          <small>
            Available from 1978/01/01  until 1978/12/31. Available from 1982/01/01  until 1982/12/31. Available from 1989/01/01  until 1989/12/31. Available from 1996/01/01  until 1996/12/31. Available from 2002/01/01
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=https://advance.lexis.com/api/search/advanced?source=MTA2OTUwNg&identityprofileid=W4HVBF32601"
              rel="noopener noreferrer"
              target="_blank"
            >
              Lexis Advance US
            </a>
          </h6>
          <small>
            Available from 1999
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=http://archives.newyorker.com/#folio=C1"
              rel="noopener noreferrer"
              target="_blank"
            >
              Miscellaneous Ejournals
            </a>
          </h6>
          <small>
            Available from 1925
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=https://gateway.proquest.com/openurl?rft_id=41130&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&url_ver=Z39.88-2004&res_dat=xri%3Apqm&rfr_id=info%3Axri%2Fsid%3Aprimo&genre=journal"
              rel="noopener noreferrer"
              target="_blank"
            >
              Music & Performing Arts Collection
            </a>
          </h6>
          <small>
            Available from 2002/11/04
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=https://gateway.proquest.com/openurl?rft_id=16493&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&url_ver=Z39.88-2004&rfr_id=info%3Axri%2Fsid%3Aprimo&res_dat=xri%3Apqm&genre=journal"
              rel="noopener noreferrer"
              target="_blank"
            >
              Music & Performing Arts Collection
            </a>
          </h6>
          <small>
            Available from 2001/08/20  until 2017/01/02
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=http://www.newyorker.com/archive"
              rel="noopener noreferrer"
              target="_blank"
            >
              OpinionArchives
            </a>
          </h6>
          <small>
            Available from 1925
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=https://gateway.proquest.com/openurl?rft_id=41130&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&res_dat=xri%3Apqm&rfr_id=info%3Axri%2Fsid%3Aprimo&url_ver=Z39.88-2004&genre=journal"
              rel="noopener noreferrer"
              target="_blank"
            >
              ProQuest Central
            </a>
          </h6>
          <small>
            Available from 2002/11/04
          </small>
        </div>
      </div>
      <div
        class="list-group-item list-group-item-action flex-column"
        id="border-style"
      >
        <div
          class="row"
        >
          <h6>
            <a
              href="http://proxy.library.nyu.edu/login?url=https://global.factiva.com/en/du/headlines.asp?XSID=S001dbr5DEs5DEmN9MpMD6mNDVyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA&CurrentSourcesDesc=sc_u_gtny%2CNew+Yorker&CurrentSources=U%7Cgtny"
              rel="noopener noreferrer"
              target="_blank"
            >
              Factiva
            </a>
          </h6>
          <small>
            Available from 1997
          </small>
        </div>
      </div>
    </div>
    <div
      class="ask-librarian"
    >
      <h6>
        <a
          href="http://library.nyu.edu/ask/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Ask a Librarian
        </a>
      </h6>
    </div>
  </div>
</DocumentFragment>
`;
